[package]
name = "glfw-sys"
version = "3.1.2"
authors = ["Camilla Berglund <elmindreda@elmindreda.org>"]

build = "build.rs"

description = "An Open Source, multi-platform library for creating windows with OpenGL contexts and receiving input and events"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/servo/glfw"
readme = "README.md"
license = "Zlib/Libpng"

[lib]
name = "glfw_sys"
path = "lib.rs"
